--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5415881019:AAG0bP4-DY8n4zCeAvy8NCgi91nxUsBUyhw"
-GDRIVE_FOLDER_ID = "0APrXa6jzazrvUk9PVA"
+BOT_TOKEN = "5136900045:AAH4aEYfTT43fCp0N21sZXSlNnlD-mNpysI"
+GDRIVE_FOLDER_ID = "1hJ6XZ3AdKcZXmXRfItghISvRFcKvhIcx"
 OWNER_ID = 5249338053
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
@@ -10,12 +10,12 @@ IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 17601644
 TELEGRAM_HASH = "df50a2b1d93e18441632fb9de4b87ac1"
 # OPTIONAL CONFIG
-DATABASE_URL = "postgres://hnrsaula:Sdl22oEyTZsrKnAPQ4GzDh4reFCNfsUe@isilo.db.elephantsql.com/hnrsaula"
+DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = "https://mirror-uploads.dark-lord-mirror.workers.dev/0:"
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://uploads.filmsandtvseriesuploads.workers.dev"
 STATUS_LIMIT = "5"
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
@@ -24,12 +24,12 @@ TORRENT_TIMEOUT = ""
 EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Update
-UPSTREAM_REPO = "https://github.com/dlslambot/VPS"
-UPSTREAM_BRANCH = "master"
+UPSTREAM_REPO = "https://github.com/DarkLordlk/Mirror-Leech"
+UPSTREAM_BRANCH = "h-code"
 # Force Sub Channel
-FSUB = "True"
-CHANNEL_USERNAME = "darklordmirror"
-FSUB_CHANNEL_ID = -1001779452858
+FSUB = ""
+CHANNEL_USERNAME = ""
+FSUB_CHANNEL_ID = 
 # Mirror
 MIRROR_LOGS = ""
 # Leech
@@ -45,7 +45,7 @@ AUTHOR_NAME = "Dark_LordSl"
 AUTHOR_URL = "https://t.me/Dark_LordSl"
 GD_INFO = "Uploaded by Dark Lord"
 # qBittorrent
-BASE_URL_OF_BOT = "http://168.61.163.69:22"
+BASE_URL_OF_BOT = "http://20.244.8.132:22"
 SERVER_PORT = "22"
 WEB_PINCODE = ""
 QB_SEED = ""
@@ -60,6 +60,9 @@ TOKEN_PICKLE_URL = ""
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
+# Heroku
+HEROKU_API_KEY = ""
+HEROKU_APP_NAME = ""
 # Mega
 MEGAREST = ""
 MEGA_API_KEY = "Z5wkjb4K"
@@ -69,7 +72,7 @@ MEGA_PASSWORD = ""
 SHORTENER = ""
 SHORTENER_API = ""
 # GDTOT COOKIE
-CRYPT = "WVd3MEFLajllNER2OFVGaHUwemlWM0pnR2dUZWYzWTc3Q0JLN2dMN3RZQT0%3D"
+CRYPT = ""
 # Appdrive
 APPDRIVE_EMAIL = ""
 APPDRIVE_PASS = ""
@@ -80,12 +83,13 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 # Buttons
+IMAGE_STATS = "https://telegra.ph/file/ad8787720adfe9d50bc1a.jpg"
 VIEW_LINK = "True"
 SOURCE_LINK = "True"
-BUTTON_FOUR_NAME = "👥 GDrive Access"
-BUTTON_FOUR_URL = "https://groups.google.com/g/dark-lord-mirror-leech/c/OQlWBKy-Upo"
-BUTTON_FIVE_NAME = "📊 Bot Logs"
-BUTTON_FIVE_URL = "https://t.me/Dark_Lord_Bots_Leech_Logs"
+BUTTON_FOUR_NAME = ""
+BUTTON_FOUR_URL = ""
+BUTTON_FIVE_NAME = ""
+BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 # Torrent Search
